feat(): create open api for method delete
